# crm-leads

./: .env  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  crm_leads.db  docker-compose.yml  pyproject.toml  seed_data.py
src/: __init__.py  database.py  main.py
src/models/: __init__.py  appeal.py  lead.py  operator.py  source.py  weight.py
src/routers/: __init__.py  appeals.py  leads.py  operators.py  sources.py  statistics.py
src/schemas/: __init__.py  appeal.py  lead.py  operator.py  source.py  statistics.py  weight.py
src/services/: __init__.py  appeal.py  operator.py  source.py  statistics.py
